--- a/rtreversi/templates/index.html
+++ b/rtreversi/templates/index.html
@@ -2,9 +2,23 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 <title>WTRiversi</title>
-<script type="text/javascript" src="static/main.js"></script>
 </head>
 <body>
-    <canvas id='canvas' width='800' height='800' style="border:1px solid #000000;"></canvas>
+<canvas id='game' width='800' height='800' style="border:1px solid #000000;"></canvas>
+<div id='status'></div> 
+
+<script type="text/javascript" src="static/js/assets/underscore.js"></script>
+<script type="text/javascript" src="static/js/assets/jquery.js"></script>
+<script type="text/javascript" src="static/js/assets/json2.js"></script>
+<script type="text/javascript" src="static/js/assets/backbone.js "></script>
+
+<script type="text/javascript" src="static/js/namespace.js "></script>
+<script type="text/javascript" src="static/js/models/status.js "></script>
+<script type="text/javascript" src="static/js/models/reversi.js "></script>
+<script type="text/javascript" src="static/js/collections/status.js "></script>
+<script type="text/javascript" src="static/js/views/status.js "></script>
+<script type="text/javascript" src="static/js/views/communicator.js "></script>
+<script type="text/javascript" src="static/js/views/reversi.js "></script>
+<script type="text/javascript" src="static/js/app.js "></script>
 </body>
 </html>
