display player status

--- a/rtreversi/templates/index.html
+++ b/rtreversi/templates/index.html
@@ -19,6 +19,7 @@
 <script type="text/javascript" src="static/js/views/status.js "></script>
 <script type="text/javascript" src="static/js/views/communicator.js "></script>
 <script type="text/javascript" src="static/js/views/reversi.js "></script>
+<script type="text/javascript" src="static/js/views/status_collection.js "></script>
 <script type="text/javascript" src="static/js/app.js "></script>
 </body>
 </html>
