modify status board

--- a/rtreversi/templates/index.html
+++ b/rtreversi/templates/index.html
@@ -1,11 +1,12 @@
 <!doctype html >
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+<link rel="stylesheet" href="static/css/rtreversi.css" type="text/css"/>
 <title>WTRiversi</title>
 </head>
 <body>
-<canvas id='game' width='600' height='600' style="border:1px solid #000000;"></canvas>
-<div id='status'></div> 
+<canvas id='game' width='520' height='520'></canvas>
+<ul id='status'></ul>
 
 <script type="text/javascript" src="static/js/assets/underscore.js"></script>
 <script type="text/javascript" src="static/js/assets/jquery.js"></script>
